--- a/html-template/index.template.html
+++ b/html-template/index.template.html
@@ -23,7 +23,7 @@
         <style type="text/css" media="screen"> 
             html, body  { height:100%; }
             body { margin:0; padding:0; overflow:auto; text-align:center; 
-                   background-color: ${bgcolor}; }   
+                   background-color: #333333; }   
             object:focus { outline:none; }
             #flashContent { display:none; }
         </style>
@@ -44,6 +44,7 @@
             flashvars.cc = 2;
             var params = {};
             params.quality = "high";
+            params.wmode = "direct";
             params.bgcolor = "${bgcolor}";
             params.allowscriptaccess = "sameDomain";
             params.allowfullscreen = "true";
